fix(Recently Viewed): wrap list without display flex

--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -1795,7 +1795,7 @@ div.interfaceLinks-row a {
   padding: 0;
   margin: 0;
 }
-.navSidebarLink.recentlyViewed {
+.navSidebarLink.recentlyViewed ul {
   display: revert;
 }
 .navSidebarLink > ul > li {
